# spool-music-player

./: .gitignore  ARCHIVE_MANIFEST.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTOR_GUIDE.md  DEVELOPMENT_NOTES.md  PROJECT_VISION.md  QUICK_START.md  README.md  ROADMAP.md  SHORTCUT_INSTRUCTIONS.txt  Spool.spec  Start Spool 64-bit.bat  Start Spool.bat  VERSION_0_AUDIT.md  build_app.py  build_windows.py  build_windows_exe.py  build_x64.bat  build_x64.py  coverflow.html  create_icon.py  pyproject.toml  spool_launcher.py  sprint-2-plan.md  version_info.txt
archive/docs/: AI-DJ.md  PROPOSAL.md  SPOOL-HARDWARE.md  sprint-2-plan.md
assets/: README.md
config/: README.md
docs/: ARCHITECTURE_DECISIONS.md  INDEX.md  README.md
legacy/: README.md
prototypes/python/: ipod_scanner.py  spool_launcher.py
prototypes/web/: coverflow.html  record-player.html  spool.html
samples/: README.md
src/: README.md
src/spool/: __init__.py  main.py
src/spool/models/: __init__.py  track.py
src/spool/services/: __init__.py  library_service.py  metadata_service.py  playback_queue.py
src/spool/ui/: __init__.py  album_column_delegate.py  library_screen.py  main_window.py  now_playing_screen.py  playback_controller.py  styles.py  track_table_model.py  vinyl_widget.py
tests/: README.md
tools/: README.md  dev_scan_mp3.py
