[project]
name = "spool-music-player"
version = "0.1.0"
description = "Spool Version 1 desktop prototype scaffold (Python + PySide6)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6",
  "mutagen",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
